# mcp-server-modal

./: README.md  pyproject.toml
src/modal_server/: server.py
